crates/wac-parser/tests/resolution/fail/variant-case-typed.wac
import x: interface {
    variant v {
        a,
        b,
        c(tuple<string, u16>),
    }
};

let i = new foo:bar { x };
